# ocga

./: .gitignore  GEMINI.md  LICENSE  MANIFEST.in  README.md  example.bat  example.sh  java_migration_plan.md  mdlFilterParser.py.bak  mdlOsmParser.py  ocga_engine.py  ocga_test.py  osmGeometry.py  pyproject.toml
docs/: OCGA.md
ocga_output/: alexander_column-rewrite.osm  church_of_st_louis-rewrite.osm  gorky_park_rotunda-rewrite.osm  main_cathedral_of_russian_army-rewrite.osm  readme.md  tsaritsino_rotunda-rewrite.osm
ocga_samples/: Komsomolskaya.ocga  Komsomolskaya.osm  alexander_column-rewrite.osm  alexander_column.ocga  alexander_column.osm  alexander_column_ocga.py  alexander_column_ocga.py.manual  church_of_st_louis-rewrite.osm  church_of_st_louis.ocga  church_of_st_louis_ocga.py  gorky_park_entrance-rewrite.osm  gorky_park_entrance.ocga  gorky_park_entrance_ocga.py  gorky_park_rotunda-rewrite.osm  gorky_park_rotunda.ocga  gorky_park_rotunda_ocga.py  komsomolskaya_station-rewrite.osm  komsomolskaya_station.ocga  main_cathedral_of_russian_army-rewrite.osm  main_cathedral_of_russian_army.ocga  main_cathedral_of_russian_army_ocga.py  moscow_manege-rewrite.osm  moscow_manege.ocga  moscow_manege.osm  novokuznetskaya-rewrite.osm  novokuznetskaya.ocga  novokuznetskaya.osm  rossi_pavilion.ocga  rossi_pavilion.osm  tsaritsino_rotunda-rewrite.osm  tsaritsino_rotunda.ocga  tsaritsino_rotunda_ocga.py
ocgaparser/: __init__.py  main.py  ocga.g4  ocga.interp  ocga.tokens  ocgaLexer.interp  ocgaLexer.py  ocgaLexer.tokens  ocgaListener.py  ocgaParser.py  ocgaVisitor.py  (+1 more)
(+32 files in other folders)
